--- a/RR_PeerAssessment2.Rmd
+++ b/RR_PeerAssessment2.Rmd
@@ -25,7 +25,9 @@ source(file.path(.Rfliburl,"getRflib.R"),local = TRUE)
 source(getRflib("is.defined.R"),local = TRUE)
 source(getRflib("myplclust.R"),local = TRUE)
 source(getRflib("strCap.R"),local = TRUE)
+```
 
+```{r init.local}
 if (!requireNamespace("data.table",quietly = TRUE)) install.packages("data.table")
 library(data.table)
  
@@ -118,7 +120,6 @@ mypal <- colors(TRUE)[i]
 
 # snapshot of default graphic parameters.
 par.def <- par(no.readonly = TRUE) 
-
 ```
 &nbsp;
 
@@ -580,7 +581,7 @@ points(x = ev.w.gcs$LONGITUDE, y = ev.w.gcs$LATITUDE, pch = 20, cex = 0.7,
        col = alpha(pal[ev.klass], 0.2))
 legend(x = -75, y = 25, ev.class[ev.klass,2], fill = pal[ev.klass], 
        border = pal[ev.klass], bty = "n", x.intersp = 1/2, y.intersp = 1, 
-       xjust = 0, yjust = 0, text.font = 2, cex = 1.0)
+       xjust = 0, yjust = 0, text.font = 2, cex = 1.1)
 
 
 # Map of Alaska
